# ChangeLog for net-misc/minissdpd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/minissdpd/ChangeLog,v 1.14 2014/11/09 12:58:15 blueness Exp $

*minissdpd-1.2.20141108 (09 Nov 2014)

  09 Nov 2014; Anthony G. Basile <blueness@gentoo.org>
  +minissdpd-1.2.20141108.ebuild:
  Version bump

*minissdpd-1.2.20140906-r1 (14 Sep 2014)

  14 Sep 2014; Anthony G. Basile <blueness@gentoo.org>
  +files/minissdpd.initd-r1, +minissdpd-1.2.20140906-r1.ebuild,
  -minissdpd-1.2-r1.ebuild, -minissdpd-1.2.20130907.ebuild,
  -minissdpd-1.2.20140610.ebuild:
  Remove older unstable versions and fix bug #522562

*minissdpd-1.2.20140906 (07 Sep 2014)

  07 Sep 2014; Anthony G. Basile <blueness@gentoo.org>
  +minissdpd-1.2.20140906.ebuild:
  minissdpd-1.2.20140906.ebuild

*minissdpd-1.2.20140610 (11 Jun 2014)

  11 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  +minissdpd-1.2.20140610.ebuild:
  Version bump

*minissdpd-1.2.20130907 (07 Sep 2013)

  07 Sep 2013; Anthony G. Basile <blueness@gentoo.org>
  +minissdpd-1.2.20130907.ebuild:
  Version bump

  25 May 2012; Anthony G. Basile <blueness@gentoo.org>
  -minissdpd-1.1.20120121.ebuild,
  -files/minissdpd-1.1.20120121-remove-initd.patch,
  -files/minissdpd-1.1.20120121-respect-CFLAGS.patch:
  Remove older unstable version

*minissdpd-1.2 (25 May 2012)

  25 May 2012; Anthony G. Basile <blueness@gentoo.org> +minissdpd-1.2.ebuild,
  +files/minissdpd-1.2-respect-CC.patch:
  Version bump

  10 Apr 2012; Anthony G. Basile <blueness@gentoo.org>
  -minissdpd-1.1.20111007.ebuild, -minissdpd-1.1.20111007-r1.ebuild,
  minissdpd-1.1.20120121.ebuild,
  +files/minissdpd-1.1.20120121-respect-CFLAGS.patch,
  minissdpd-1.1.20120410.ebuild, -files/minissdpd.initd-r1,
  -files/minissdpd-remove-initd.patch, -files/minissdpd-respect-CFLAGS.patch,
  files/minissdpd.initd:
  Remove older unstables, and sanitize file names in FILESDIR

*minissdpd-1.1.20120410 (10 Apr 2012)
