@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/minissdpd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/minissdpd/ChangeLog,v 1.14 2014/11/09 12:58:15 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/minissdpd/ChangeLog,v 1.15 2014/11/09 14:08:09 blueness Exp $
+
+  09 Nov 2014; Anthony G. Basile <blueness@gentoo.org> -files/minissdpd.initd,
+  -minissdpd-1.2.20140906.ebuild:
+  Remove old net-tools stuff
 
 *minissdpd-1.2.20141108 (09 Nov 2014)
 
